modificacion del bottom css en portafolio details

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -526,6 +526,7 @@ section {
   padding-top: 40px;
   background-color: #24242E;
   color: #ffffff;
+  padding-bottom: 260px;
 }
 .portfolio-details .portfolio-details-slider img {
   width: 100%;
